@@ -27,9 +27,12 @@ module Fairy
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
-##CONF.BUFFEREDQUEUE_POOL_THRESHOLD = 1000
+##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
 ##CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
+
+##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
+CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 
 ##CONF.N_MOD_GROUP_BY = 5
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
@@ -56,6 +59,7 @@ CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
 ##CONF.LOG_LEVEL = :DEBUG
 #CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
+CONF.LOG_IMPORT_NTIMES_POP = 1000
 
 ##CONF.USE_RESOLV_REPLACE = false
 
