@@ -73,6 +73,8 @@ module Fairy
     def_prop :MOD_GROUP_BY_BUFFERING_POLICY
     def_prop :MOD_GROUP_BY_CMSB_THRESHOLD
 
+    def_prop :BARRIER_MEMORY_BUFFERING_POLICY
+
     def_prop :SORT_SAMPLING_MIN
     def_prop :SORT_SAMPLING_MAX
     def_prop :SORT_SAMPLING_RATIO_1_TO
@@ -174,6 +176,8 @@ module Fairy
   CONF.POOLQUEUE_POOL_THRESHOLD = 1000
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
   CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
+
+  CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
 
   CONF.N_MOD_GROUP_BY = 5
   CONF.HASH_MODULE = "fairy/share/hash-md5"
